apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=junit ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=junit ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="Oxlint" tests="0" failures="0" errors="0">

</testsuites>
----------
CLI result: LintSucceeded
----------
