apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=stylish --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=stylish --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------

disable-directive.js
  9:29   warning  Unused eslint-disable directive (no problems were reported from no-debugger).  
  12:29  warning  Unused oxlint-disable directive (no problems were reported from no-debugger).  
  15:29  warning  Unused oxlint-disable directive (no problems were reported from eslint/no-debugger).  

✖ 3 problems (0 errors, 3 warnings)
----------
CLI result: LintSucceeded
----------
