apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=stylish parser-error.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=stylish parser-error.js
working directory: fixtures/cli/output_formatter_diagnostic
----------

parser-error.js
  3:9  error  Expected `;` but found `:`  

✖ 1 problem (1 error, 0 warnings)
----------
CLI result: LintFoundErrors
----------
